manifests/namspaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  django-todo-app

---

apiVersion: v1
kind: Namespace
metadata:
  name:  static-landing-page
