manifests/deploy.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: django-todo-app
  namespace: django-todo-app
  labels: 
    app: django-todo-app
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: django-todo-app
  template:
    metadata:
      labels:
        app: django-todo-app
    spec:   
      containers:   
      - name: django-todo-app
        image: dipanshu13/django-todo:v1
        ports:
        - containerPort: 8000



---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site-deployment
  namespace: static-landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-site
  template:
    metadata:
      labels:
        app: static-site
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: site-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: site-config
          configMap:
            name: static-site-config
