manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-todo-app-svc
  namespace: django-todo-app
  labels: 
    app: django-todo-app
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector: 
    app: django-todo-app

# --- 

# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-static-site-service
# spec:
#   selector:
#     app: nginx-static-site
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
